--- a/style.css
+++ b/style.css
@@ -1,23 +1,57 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
 body{
-    background-color: #fffffffd;
+    font-family: 'Quicksand', sans-serif;
 }
 h1{
     text-align: center;
-    color: #6096B4;
-    font-family: 'Courier New', Courier, monospace;
 }
 h3{
     text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: #6096B4;
 }
 p{
-    font-family: Verdana;
-    border:2px solid #20262E;
     text-align: justify;
-    color: #20262E;
-    padding: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     margin-left: 50px;
     margin-right: 50px;
-    /* font-weight: bold; */
+    line-height: 1.5;
+    text-indent: 3em;
+}
+a{
+    text-align: center;
+    font-weight: 700;
+    text-decoration: none;
+}
+
+#button:link{
+    background-color:  #e63946;
+    color: white;
+    padding: 15px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+#button:visited{
+    background-color:  #457b9d;
+    color: white;
+    padding: 15px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+#button:hover, #button:active{
+    background-color: yellow;
+}
+
+.main-font{
+    color: #000000;
+    font-weight: 700;
+}
+
+.secondary-font{
+    color: #8D99AE;
+    font-weight: 500;
 }
