--- a/style.css
+++ b/style.css
@@ -2,9 +2,6 @@
 
 body{
     font-family: 'Quicksand', sans-serif;
-    background-image: url('https://cdn.pixabay.com/photo/2014/06/03/19/38/road-sign-361514_960_720.png');
-    background-size: cover;
-    background-repeat: no-repeat;
 }
 h1{
     text-align: center;
@@ -12,6 +9,7 @@ h1{
 h3{
     text-align: center;
 }
+
 p{
     text-align: justify;
     padding-top: 5px;
@@ -22,7 +20,6 @@ p{
     text-indent: 3em;
 }
 a{
-    text-align: center;
     font-weight: 700;
     text-decoration: none;
 }
@@ -46,7 +43,7 @@ a{
 }
 
 #button:hover, #button:active{
-    background-color: yellow;
+    background-color: #778da9;
 }
 
 .main-font{
@@ -54,7 +51,11 @@ a{
     font-weight: 700;
 }
 
-.secondary-font{
-    color: #8D99AE;
+.secondary{
+    color: #000000;
     font-weight: 500;
+}
+
+.link-bawah {
+    text-align: center;
 }
